// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de <GifGrid/> debe de mostrar items cuando se cargan imagenes con useFetchGifs() 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Terror
  </h3>
  <div
    className="card-grid animate__animated animate__fadeIn"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Prueba jeje"
      url="https://cualquiercosa.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas de <GifGrid/> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Terror
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando
  </p>
  <div
    className="card-grid animate__animated animate__fadeIn"
  />
</Fragment>
`;
